Días 11-12: feat Implementamos MishiExecutor para soporte de script (Python/JS) externos. Recatorización de MishiOrchestrator y proceso de escaneo recursivo